add_subdirectory(active_interactor)
add_subdirectory(allreduce)
if(VW_BUILD_VW_C_WRAPPER)
  add_subdirectory(c_wrapper)
endif()
add_subdirectory(cli)
add_subdirectory(cache_parser)
add_subdirectory(common)
add_subdirectory(config)
add_subdirectory(core)
if(VW_FEAT_CSV)
  add_subdirectory(csv_parser)
endif()
add_subdirectory(explore)
add_subdirectory(io)
add_subdirectory(json_parser)
add_subdirectory(model_merger)
add_subdirectory(slim)
if(VW_FEAT_NETWORKING)
  add_subdirectory(spanning_tree_bin)
  add_subdirectory(spanning_tree)
endif()
add_subdirectory(text_parser)
if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
  add_subdirectory(test_common)
endif()
if(VW_FEAT_FLATBUFFERS)
  add_subdirectory(fb_parser)
endif()
